@@ -199,6 +199,7 @@
   "cmd.act.color.set.hsl": "TSL",
   "cmd.act.color.set.hex": "Hex",
   "cmd.act.unbreakable": "Définir incassable",
+  "cmd.act.palette": "Palette du chat",
 
   "cmd.act.error.noargument": "Cette commande prend des arguments!",
   "cmd.act.argument.player.unknown": "Joueur inconnu ! '%s'"
